<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="24dp"
        android:background="#E5E5E5"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="190dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/backdrop"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/backdrop" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_alignBottom="@id/backdrop"
                        android:background="@drawable/gradient" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/top"
                    android:layout_width="259dp"
                    android:layout_height="57dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="140dp"
                    android:layout_marginEnd="32dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/poster"
                    app:layout_constraintTop_toTopOf="parent">


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_weight="0.5"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvRating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:paddingTop="4dp"
                            tools:text="8.2 Rating" />

                        <TextView
                            android:id="@+id/tvLanguage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:gravity="start"
                            android:paddingTop="8dp"
                            tools:text="English" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginEnd="32dp"
                        android:layout_weight="0.5"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvNoOfSeasons"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:paddingTop="4dp"
                            tools:text="2 Seasons" />

                        <TextView
                            android:id="@+id/tvDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:gravity="end"
                            android:paddingTop="8dp"
                            tools:text="2018" />

                    </LinearLayout>


                </LinearLayout>


                <ImageView
                    android:id="@+id/poster"
                    android:layout_width="104dp"
                    android:layout_height="156dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="120dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/poster" />

                <LinearLayout
                    android:layout_width="269dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="32dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/poster"
                    app:layout_constraintTop_toBottomOf="@+id/top">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            app:srcCompat="@drawable/ic_add" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/my_list" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            app:srcCompat="@drawable/ic_thumb_up" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/rate" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            app:srcCompat="@drawable/ic_share" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/share" />

                    </LinearLayout>

                </LinearLayout>


                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="26dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/my_blue"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/poster"
                    tools:text="The BlackList" />

                <TextView
                    android:id="@+id/tvPlot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="TextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/tvTitle"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/cast_amp_crew"
                    android:textColor="@color/commonBlue"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/tvTitle"
                    app:layout_constraintTop_toBottomOf="@+id/tvPlot" />

                <include
                    android:id="@+id/castLayout"
                    layout="@layout/cast_list_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/textView8"
                    app:layout_constraintTop_toBottomOf="@+id/textView8" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="16dp"
                    android:padding="8dp"
                    android:spinnerMode="dialog"
                    app:layout_constraintStart_toStartOf="@+id/castLayout"
                    app:layout_constraintTop_toBottomOf="@id/castLayout" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/episodes_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/spinner"
                    tools:listitem="@layout/episodes_list_item" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </ScrollView>


    </LinearLayout>
</layout>